--- a/index.html
+++ b/index.html
@@ -1,86 +1,79 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title> Awards | Iron Man </title>
-<link href="mystyles.css" rel="stylesheet">
-</head>
-<body>
 
-<table style="width: 1000px; margin-left: auto; margin-right: auto;">
-<tbody>
-<tr>
-<td><a id="backtotop"></a><img title="Iron Man Banner" src="images/ironmanbanner.jpg" alt="Iron Man" /></td>
-</tr>
-</tbody>
-</table>
-<table style="width: 1000px; margin-left: auto; margin-right: auto;">
-<tbody>
-<tr>
-<td><a href="index.html"><img title="Home" src="images/home.jpg" onmouseover="this.src='images/homeroll.jpg'" onmouseout="this.src='images/home.jpg'" alt="Home" width="198px"/></a><a href="cast.html"><img title="Cast" src="images/cast.jpg" onmouseover="this.src='images/castroll.jpg'" onmouseout="this.src='images/cast.jpg'" alt="Cast" width="198px"/></a><a href="awards.html"><img title="Awards" src="images/awards.jpg" onmouseover="this.src='images/awardsroll.jpg'" onmouseout="this.src='images/awards.jpg'" alt="Awards" width="198px"/></a><a href="boxoffice.html"><img title="boxoffice" src="images/boxoffice.jpg" onmouseover="this.src='images/boxofficeroll.jpg'" onmouseout="this.src='images/boxoffice.jpg'" alt="Box Office" width="198px"/></a><a href="references.html"><img title="References" src="images/references.jpg" onmouseover="this.src='images/referencesroll.jpg'" onmouseout="this.src='images/references.jpg'"  alt="References" width="198px"/></a></td>
-</tr>
-</tbody>
-</table>
-<table style="width: 1000px; margin-left: auto; margin-right: auto;">
-<tbody>
-<tr>
-<td>
-<p style="text-align: center;"><img src="images/awardsbanner.jpg" title="Awards Heading" alt="Awards" /></p>
-</td>
-</tr>
-</tbody>
-</table>
-<table style="width: 1000px; margin-left: auto; margin-right: auto;">
-</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<table style="width: 980px; background-color: black; margin-left: auto; margin-right: auto;" cellpadding="10">
-<tbody>
-<tr>
-<td colspan="2"><img title="Robert Downey Jr. At Teen's Choice Awards" src="images/rdjteens.jpg" alt="Robert Downey Jr. At Teen's Choice Awards" width="960"/></td>
-</tr>
-<tr>
-<td>
-<h3>Iron Man received numerous awards and nominations. Some of which are the most prestigious awards in the film industry such as Saturn Awards and the Satellite Awards. The list includes:</h3>
-<h4>Saturn Awards:</h4>
-<ul>
-<li>Best Actor</li>
-<li>Best Science Fiction Film</li>
-<li>2x Best Director</li>
-</ul>
-<h4>Central Ohio Film Critics:</h4>
-<ul>
-<li>Actor of the Year</li>
-</ul>
-<h4>Satellite Awards:</h4>
-<ul>
-<li>Best Film Editing</li>
-<li>Best DVD Extra</li>
-</ul>
-<h4>MTV Movie Awards:</h4>
-<ul>
-<li>Best Summer Movie You Haven't Seen Yet</li>
-</ul>
-</td>
-<td><img title="Robert Downey Jr. with Award" src="images/rdjaward.jpeg" alt="Robert Downey Jr. Holding Award" width="450"/></td>
-</tr>
-<td style="text-align: center; width: 910px; height: 18px;" colspan="5">
-<table style="width: 980px; background-color: black; margin-left: auto; margin-right: auto;" cellpadding="10">
-<tbody>
-<tr>
-<td>
-<h4><strong><a class="anchor" title="Back to Top" href="#backtotop">Back to Top</a></strong></h4>
-</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-</tbody>
-</table>
+<head>
+  <title>CIS*1250 Template</title>
+  <meta name="google" content="notranslate">
+</head>
+
+<body>
+  <h1>Mauris Tincidunt</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tempor ultrices. Suspendisse ac aliquet
+    ante, a condimentum leo. Fusce ac risus quam. Nulla scelerisque enim massa, vel semper urna vehicula ac. Cras in
+    pretium ipsum. Praesent ultrices feugiat accumsan. Suspendisse eget tellus facilisis nisl feugiat molestie nec nec
+    nisl. Suspendisse sagittis, mi quis sagittis placerat, ante urna semper velit, sed sodales quam enim in lorem. Duis
+    ac nisl nec elit mollis tempus ac vel odio. Mauris accumsan, mi et consectetur bibendum, turpis odio mollis dui, eu
+    venenatis turpis nibh eu lacus. Nunc eleifend nunc eu orci tempus lobortis. Donec scelerisque posuere sapien,
+    euismod egestas massa. Nunc id sodales sapien, id rhoncus diam. Mauris pellentesque est dapibus dolor dapibus
+    maximus.</p>
+  <p>Ut dictum velit et sapien ornare accumsan. Vivamus varius, mauris non porta euismod, est lorem scelerisque tortor,
+    id porttitor nisl purus vel odio. Etiam mi metus, imperdiet sit amet purus vitae, volutpat tempus tortor. Maecenas
+    rhoncus malesuada blandit. Etiam tempus ex sit amet lectus dignissim, eget mollis tellus laoreet. Phasellus in
+    auctor mauris. Cras gravida porttitor tortor ac fringilla. Orci varius natoque penatibus et magnis dis parturient
+    montes, nascetur ridiculus mus. Pellentesque consequat convallis mi, eu sodales nunc venenatis non. Aliquam metus
+    dolor, rutrum eget nulla nec, auctor condimentum quam. Phasellus in nulla diam. Suspendisse luctus lobortis
+    pellentesque. Morbi ultrices tellus quis lorem lobortis vestibulum. Proin vitae ipsum purus.</p>
+  <p>Maecenas orci velit, scelerisque ut nisi a, porta sollicitudin sapien. Donec eu ipsum aliquet, malesuada quam sed,
+    posuere elit. Fusce eu eros libero. Aliquam convallis porta nunc maximus placerat. Etiam sit amet sem odio. Sed
+    risus erat, consequat at erat et, ullamcorper rhoncus diam. Integer vehicula mi sed mauris sagittis laoreet. Sed
+    maximus, nibh quis lobortis auctor, metus mi cursus leo, nec laoreet dui tellus at quam. Nullam sagittis dolor nisl,
+    eu viverra ex rutrum sed.</p>
+  <p>Nulla facilisi. Duis at felis et justo mollis accumsan in commodo tellus. Ut pellentesque risus quis felis auctor
+    vulputate. Nullam non leo id metus ornare ultrices eget eget leo. Maecenas feugiat rutrum dictum. Praesent accumsan
+    purus odio, sed fringilla diam faucibus eu. In lacinia orci nec leo blandit porta. Aenean egestas dapibus libero, et
+    condimentum erat. Phasellus fermentum neque libero. Vivamus maximus faucibus nibh ut eleifend. Sed sit amet lorem
+    enim. Sed consectetur enim libero, et maximus lacus pulvinar eu. Praesent in efficitur velit. Morbi tempor et risus
+    vitae vestibulum. Nunc nec tincidunt quam. Phasellus congue nibh non rutrum iaculis.</p>
+  <p>Quisque iaculis efficitur lacus non interdum. Aenean non turpis id magna posuere consectetur. Nam tempus tristique
+    lorem et pulvinar. Aliquam porttitor imperdiet porttitor. Donec vitae luctus lacus, et malesuada elit. Quisque et
+    purus urna. Morbi vitae luctus ex, a vulputate massa. Integer iaculis massa enim, fringilla congue urna interdum sit
+    amet. Cras pellentesque, lacus in cursus lobortis, ipsum tortor tincidunt orci, sit amet gravida arcu neque eu
+    ligula. Nam eu ipsum sed nulla congue dictum vel efficitur justo. Maecenas sit amet ligula in libero tempus eleifend
+    et a sapien. Integer fermentum cursus mollis. Pellentesque dictum ultricies imperdiet. Nulla hendrerit gravida
+    ultricies.</p>
+  <h1>Condimentum Consequat</h1>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in feugiat ipsum. In tincidunt quis erat eget
+    suscipit. Mauris et fermentum dolor. Nullam sapien massa, cursus viverra est sed, faucibus venenatis nisl. Duis at
+    posuere lacus, a varius dolor. Proin ultricies in magna eu finibus. Duis a nisl a sapien aliquam efficitur. Nunc
+    quis turpis luctus mauris ultricies luctus. Aenean molestie eu eros ut pulvinar. Nunc gravida, neque volutpat
+    fringilla aliquet, urna felis tempus nulla, eu luctus magna sapien et turpis. Maecenas ut ligula tristique, molestie
+    orci vel, semper orci. Sed nulla arcu, molestie vitae accumsan non, molestie pellentesque purus. Pellentesque
+    efficitur massa metus, at vulputate urna viverra non. Praesent id finibus nibh, in dictum orci. Pellentesque
+    blandit, lectus vitae egestas efficitur, nisi nulla ultrices ligula, ac commodo libero metus vulputate libero.
+    Phasellus cursus, sapien a gravida lacinia, lacus odio condimentum erat, eget porttitor dui turpis et nisl.</p>
+  <p>Proin quis porttitor erat. Donec et urna euismod, vehicula purus in, maximus ante. Sed laoreet, purus a volutpat
+    posuere, sapien diam pharetra magna, sit amet faucibus magna augue nec arcu. Nulla auctor, metus ac hendrerit
+    laoreet, mauris est dapibus mauris, sed condimentum leo sapien ac purus. Duis eu felis sit amet dolor egestas
+    elementum. Etiam mollis arcu vel mi lacinia, sed sollicitudin ipsum malesuada. Pellentesque lacus nisl, laoreet ut
+    massa non, condimentum imperdiet lorem. Etiam auctor congue erat, id vehicula orci finibus quis. Aenean in dapibus
+    orci. In hac habitasse platea dictumst. Nullam sed dignissim mi, consectetur vulputate neque. Donec elementum nulla
+    quis diam tincidunt sagittis. Mauris non orci vel nisl faucibus vestibulum vitae at turpis. Aliquam eget lacus
+    porta, auctor mi non, fermentum dolor. Fusce pharetra nec justo vitae faucibus.</p>
+  <p>Nunc dictum viverra arcu et ultrices. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+    turpis egestas. In pulvinar varius leo, nec vulputate est volutpat ac. Ut sodales lacus ac sem rutrum, nec porttitor
+    est accumsan. Suspendisse neque lacus, consequat non mauris in, congue ultrices augue. Donec massa felis, varius
+    vitae consectetur et, tincidunt vitae eros. Donec tincidunt accumsan risus, a consequat erat venenatis vitae. Nulla
+    imperdiet venenatis ipsum vel sodales. Quisque sollicitudin eget nibh sit amet commodo. Curabitur iaculis in leo a
+    fringilla. Sed bibendum metus sed volutpat sodales. Nam sollicitudin molestie sodales. Sed malesuada at odio at
+    mattis. Quisque eu ultricies ante, ac fermentum enim.</p>
+  <p>Morbi nulla nulla, auctor id dictum quis, tincidunt ut lacus. Maecenas libero erat, pharetra at velit sed, suscipit
+    porta nunc. Vestibulum at orci a enim luctus mollis. Proin interdum, lectus ut fringilla sodales, lectus tortor
+    commodo ante, non ornare est risus vel nibh. Quisque sodales nisi sed vestibulum cursus. Nam nec tincidunt odio, eu
+    condimentum orci. Sed vestibulum, nulla at viverra aliquet, neque sem lobortis ipsum, tempus tempus ex elit at
+    turpis.</p>
+  <p>Donec vehicula tempus dui sed egestas. Aenean elementum nisi et auctor fringilla. Nulla imperdiet ac lacus
+    facilisis ornare. In hac habitasse platea dictumst. Sed vitae erat at nisi blandit consectetur eu ac nisl. Aliquam
+    eu pharetra neque. Mauris euismod sagittis sem eget venenatis. Phasellus sit amet viverra arcu.</p>
+</body>
+
+</html>
